adiciona agradecimentos e principais revisões

--- a/src/Cap00/Abstract.tex
+++ b/src/Cap00/Abstract.tex
@@ -1,12 +1,16 @@
 \chapter*{Abstract}
-\noindent Kinematically redundant manipulators have more degrees of freedom (DOFs) than necessary to perform a specific task,
- offering greater flexibility and dexterity in executing trajectories. However, these additional DOFs also introduce increased
-  complexity in the manipulator's inverse kinematics, necessitating redundancy resolution schemes to find a particular solution 
-  that optimizes performance criteria such as joint speed, manipulability, or distance to obstacles. In this work, we present a 
-  theoretical foundation on the key aspects of differential inverse kinematics for redundant manipulators. Subsequently, we 
-  implemented a simulated environment using the Webots simulator and the Robot Operating System (ROS), allowing practical 
-  application of the \emph{Resolved Rate Motion Control} (RRMC) scheme. Our experiments demonstrated that the controller can 
-  optimize performance metrics without violating primary kinematic constraints in different scenarios of Cartesian trajectory execution.
+\noindent Kinematically redundant manipulators have more degrees of freedom (DOFs) 
+than necessary to perform a specific task, offering greater flexibility and dexterity 
+in executing trajectories. However, these additional DOFs also introduce greater complexity 
+in the manipulator's inverse kinematics, requiring the use of redundancy resolution schemes 
+to find a particular solution that optimizes the manipulator's performance criteria, such as 
+joint speed, manipulability, or distance to obstacles. This work presents a theoretical foundation
+ on the main points related to differential inverse kinematics for redundant manipulators. To 
+ validate the proposed methodology, a virtual environment was implemented using the Webots simulator 
+ and the Robot Operating System (ROS), allowing the practical application of the \emph{Resolved Rate Motion Control} 
+ (RRMC) control scheme. The simulations carried out show that the controller is capable of optimizing 
+ performance metrics without violating the primary kinematic constraints in different Cartesian trajectory 
+ execution scenarios.
 
   \vspace{5mm}
 
