--- a/src/Cap00/Agradecimentos.tex
+++ b/src/Cap00/Agradecimentos.tex
@@ -1,16 +1,34 @@
 \chapter*{Agradecimentos}
 
-\lipsum[1]
+Em primeiro lugar, agradeço à minha família. Aos meus pais, Josenildo e Gilvanice, 
+pelo amor e apoio incondicional ao longo de toda minha formação como ser humano e 
+também durante minha jornada acadêmica. À minha irmã, Andressa, pelo exemplo de perseverança,
+inspiração e por sempre estar ao meu lado, tanto nos momentos de dificuldade como nos de alegria. 
 
-\vspace{15mm}
+Ao corpo docente do IC em especial aos professores do curso de Engenharia da Computação,
+Erick de Andrade e Thiago Cordeiro, sou imensamente grato pelo conhecimento compartilhado 
+durante minha formação. Um agradecimento especial ao meu orientador Glauber Leite que me 
+introduziu ao mundo fascinante da robótica, durante o curso e também em alguns projetos de 
+desenvolvimento que tive de oportunidade de participar. Sua orientação, conselhos e paciência 
+foram fundamentais para que esse trabalho chegasse a sua forma final. Do mesmo modo não 
+posso deixar de agradecer ao professor Ícaro Araújo
+pelo acolhimento durante a graduação não só na participação de projetos relevantes para 
+a minha formação, mas também no esforço contínuo em trazer para o ambiente acadêmico do 
+IC o AI-SPARC: um grupo de estudos relevante que une alunos e professores em prol da 
+pesquisa científica.
 
-\begin{minipage}{.45\linewidth}
-    \begin{flushleft}
-        Data, Local
-    \end{flushleft}
-\end{minipage}
-\begin{minipage}{.45\linewidth}
-    \begin{flushright}
-        \textit{Nome, abreviatura, nada, etc}
-    \end{flushright}
-\end{minipage}
+Ao corpo administrativo do instituto, especialmente à secretaria, em nome do 
+técnico Marcelo de Gusmão, agradeço pela eficiência e suporte contínuo, garantindo 
+que todos os processos administrativos fossem realizados de forma ágil e 
+sem complicações.
+
+Aos meus amigos de graduação, Augusto, Valério, João, Kevin, Sofia, Álvaro, 
+Roberto, Rafael e Thiago: vocês foram responsáveis por tornaram essa jornada 
+mais divertida, meu sincero agradecimento. A amizade e o companheirismo de 
+vocês nos momentos mais tensos e também nas horas de descontração foram essenciais 
+para enfrentar os desafios e chegar até aqui.
+
+A realização desta monografia só foi possível graças ao apoio e contribuição 
+de muitas outras pessoas, às quais com certeza não puderam ser explicitamente 
+mencionadas aqui. Gostaria de expressar minha mais profunda gratidão, a todos, 
+o meu mais sincero obrigado!
