--- a/src/Cap00/Dedicatoria.tex
+++ b/src/Cap00/Dedicatoria.tex
@@ -1,11 +1,10 @@
 \chapter*{Dedicatória}
 \vfill
 \begin{flushleft}
-
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-
+    Dedico este trabalho em primeiro lugar à minha família, cujo incentivo 
+    aos estudos foi fundamental para que eu chegasse até aqui. Em segundo lugar, 
+    à toda a comunidade acadêmica da Universidade Federal de Alagoas, sem a qual este trabalho 
+    jamais poderia ser concretizado. Em terceiro e último lugar, mas não menos importante, 
+    dedico a você, leitor, que se interessou de alguma maneira pelo mundo fascinante da robótica.
 \end{flushleft}
-\begin{flushright}
-    \textit{Nome, abreviatura, ou nada, etc}
-\end{flushright}
 \vfill
