--- a/src/Cap00/Simbolos.tex
+++ b/src/Cap00/Simbolos.tex
@@ -16,8 +16,8 @@
     \item[$J^\dag$] \quad Pseudo-inversa da matriz jacobiana.
     \item[$\xi$] \quad Velocidade do efetuador final.
     \item[$\mu$] \quad Medida de manipulabilidade.
-    \item[$w$] \quad Índice de performance.
-    \item[$I(w)$] \quad Pontuação da métrica de desempenho.
-    \item[$E_0$] \quad Posição inicial do efetuador.
-    \item[$E_f$] \quad Posição final do efetuador.
+    \item[$w$] \quad Métrica de performance.
+    \item[$I(w)$] \quad Índice de desempenho da métrica w.
+    \item[$E_i$] \quad Posição inicial do efetuador.
+    \item[$E_t$] \quad Posição desejada do efetuador.
 \end{description}
