--- a/src/Cap01/Capitulo1.tex
+++ b/src/Cap01/Capitulo1.tex
@@ -12,7 +12,7 @@ assegura que o robô continue a executar suas tarefas mesmo próximo a pontos si
 de redundância possibilita a otimização de outros critérios de desempenho, como minimizar o consumo de energia, reduzir o desgaste, melhorar 
 a precisão e aumentar a capacidade de evasão de obstáculos.
 
-Recentemente,~\cite{li2023pseudo} propuseram um novo esquema de evitação de obstáculos para manipuladores redundantes 
+Recentemente,~\cite{li2023pseudo} propuseram um novo esquema de \emph{Obstacle avoidance} (OA) para manipuladores redundantes 
 baseado em na pseudo-inversa da matriz jacobiana no nível das acelerações das juntas, demonstrando a viabilidade do método através de simulações 
 com o manipulador robótico PA10 o qual possui \(7\) DOFs. Por outro lado,~\cite{kuri2023som}
 abordaram uma técnica de controle inteligente para um manipulador robótico espacial com 5 DOFs para executar
@@ -61,7 +61,7 @@ de desempenho do manipulador.
 	\item Estudar a modelagem de cadeias cinemáticas em manipuladores robóticos seriais
 	\item Investigar o uso da cinemática direta e inversa diferenciais para execução de trajetórias cartesianas
 	\item Implementar a lei de controle utilizando a cinemática direta diferencial e esquemas de resolução de redundância utilizando a pseudo inversa da matriz jacobiana
-	\item Propor um ambiente simulado para execução de experimentos utilizando o modelo virtual do manipulador robótico com 5 graus de liberdade
+	\item Propor um ambiente virtual para execução de simulações utilizando o modelo de um manipulador robótico com 5 graus de liberdade
 	\item Analisar o desempenho do esquema de controle em diferentes cenários de execução de trajetórias e critérios de desempenho.
 \end{itemize}
 
