--- a/src/Cap05/Capitulo5.tex
+++ b/src/Cap05/Capitulo5.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusão}\label{cap:conclusao}
 
-Neste trabalho, discutimos a aplicação de esquemas de controle com resolução de 
+Este trabalho discutiu a aplicação de esquemas de controle com resolução de 
 redundância para abordar os desafios impostos pelas singularidades na cinemática 
 diferencial inversa de um manipulador serial com cinco graus de liberdade. Foi proposto ambiente completamente
 simulado para testar e validar a estratégia de controle, proporcionando também uma comunicação robusta 
