--- a/src/main.tex
+++ b/src/main.tex
@@ -32,7 +32,7 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % %
 % Opcionais % % % % % % % % % % % % % % % % % % % % %
 % % % % % % % % % % % % % % % % % % % % % % % % % % %
-% \dedicatoria{} % opcional
+\dedicatoria{} % opcional
 \agradecimentos{} % opcional
 \epigrafe{} % opcional
 
