--- a/src/Cap03/Capitulo3.tex
+++ b/src/Cap03/Capitulo3.tex
@@ -1,6 +1,6 @@
 \chapter{Implementação}\label{cap:methods}
 
-Neste capítulo, iremos explorar as ferramentas e métodos utilizados na
+Este capítulo explora as ferramentas e métodos utilizados na
 concepção de um ambiente robótico simulado para um manipulador com cinco graus
 de liberdade do tipo 5R. O manipulador tem uma cadeia cinemática simples que
 pode ser entendida como a composição de dois outros braços planares, mas que
@@ -10,10 +10,10 @@ cinemática e também a representação do modelo virtual do robô dentro do
 simulador \emph{Webots}. Em seguida, iremos definir a arquitetura de
 comunicação proposta para se controlar o manipulador utilizando o conceito de
 \emph{Actions} presente no framework \emph{Robot Operating System} (ROS), o
-qual permitiu uma implementação modularizada para execução dos experimentos.
+qual permitiu uma implementação modularizada para execução das simulações.
 Por fim, iremos detalhar o esquema de controle e bibliotecas utilizadas na
-implementação do algoritmo RRMC para execução de trajetórias retilíneas bem como os 
-experimentos realizados para se avaliar a resolução de redundância na execução de 
+implementação do algoritmo RRMC para execução de trajetórias retilíneas bem como a
+metodologia utilizada para avaliar a resolução de redundância na execução de 
 tais trajetórias.
 
 \section{Simulação de manipuladores robóticos}
@@ -60,9 +60,10 @@ cadeia de juntas rotacionais, permitindo uma fácil construção do robô real,
 como por exemplo, sendo composto por uma sequência de servo motores conectados
 por soquetes como ilustrado na figura~\ref{fig:robot-model}. A cadeia
 cinemática é similar ao que já vimos no exemplo dos braço planar 3R, contudo
-juntas consecutivas possuem eixos de rotação ortogonais entre si. Com isso, a
-posição do efetuador final não fica restrita a um plano perpendicular ao eixo
-de rotação das juntas, o que permite especificarmos no espaço de trabalho,
+juntas consecutivas possuem eixos de rotação ortogonais entre si, como indicado na
+figura~\ref{fig:kin-chain}. Com isso, a posição do efetuador final não fica 
+restrita a um plano perpendicular ao eixo de rotação das juntas, o que permite 
+especificarmos no espaço de trabalho,
 vetores com três coordenadas para compor a trajetória a ser seguida. Como \(n =
 5 \text{ e } m = 3\) o manipulador tem grau de redundância de duas juntas
 excedentes. A tabela~\ref{tab:dh-parameters-5r} resume os parâmetros DH
@@ -177,8 +178,8 @@ definidos, retornando um único resultado e são normalmente usados para tarefas
 que possuem requisição e retorno, como por exemplo capturar uma imagem de um
 único quadro, dispensando o processamento contínuo. Por outro lado, ações são
 destinadas a tarefas de longa duração e são construídas com base em diferentes
-tópicos e serviços. Ações consistem em três partes: um objetivo, um
-\emph{feedback} e um resultado. Um nó do tipo cliente de ação envia um objetivo
+tópicos e serviços. A figura~\ref{fig:ros-action} ilustra os componentes básicos
+de um nó de ação: um objetivo, um \emph{feedback} e um resultado. Um nó do tipo cliente de ação envia um objetivo
 para um nó servidor de ação, que reconhece a requisição, retorna um fluxo
 continua de dados através de um feedback até que a ação seja concluída ou
 cancelada, quando por fim retorna um resultado.
@@ -243,7 +244,7 @@ equação~\ref{eq:pseudo-inverse}.
     \caption{Diagrama de blocos do controlador RRMC}\label{fig:block-diagram}
 \end{figure}
 
-Para a realização dos experimentos, foi implementado~\footnote{código disponível em 
+Para a realização das simulações, foi implementado~\footnote{código disponível em 
 \url{https://github.com/hugotallys/snakesim}}  o algoritmo~\ref{rrc-alg} que escolhe o vetor \(\dot{q_0}\)
  de acordo com o gradiente dado pela equação~\ref{eq:metric-gradient}. As duas métricas apresentadas anteriormente
 foram calculadas: \emph{distância para os limites mecânicos das juntas} e
@@ -280,17 +281,17 @@ diferenças finitas, considerando um passo \(h\) suficientemente pequeno.
         \EndProcedure\end{algorithmic}
 \end{algorithm}
 
-\subsection*{Experimentos}
+\subsection*{Simulações}
 
-Os experimentos focaram na avaliação da resolução de redundância
+As simulações focaram na avaliação da resolução de redundância
 sob valores variados do ganho (\(k_0\)) e envolveram dois cenários. No primeiro
 cenário, o manipulador foi controlado de modo a otimizar a distância para o limite mecânico das juntas, 
 executando movimentos internos no seu espaço nulo, mantendo a posição do efetuador final estacionária.
 No segundo cenário, além de movimentos internos para otimizar seu índice de manipulabilidade, o manipulador 
-seguiu uma trajetória cartesiana entre a posição inicial \(E_0\) e um outro ponto \(E_f\) no seu espaço 
-de trabalho. Os índices de desempenho, configuração das juntas e a 
+seguiu uma trajetória cartesiana entre a posição inicial \(E_i\) e um outro ponto \(E_t\) correspondente à posição desejada
+no seu espaço de trabalho. Os índices de desempenho, configuração das juntas e a 
 posição do efetuador final foram registrados na simulação de modo a se avaliar 
-a eficácia do esquema da resolução de redundância na execução de tais experimentos.
+a eficácia do esquema da resolução de redundância na execução de tais simulações.
 
 Em cada iteração do \emph{loop de trajetória}, o vetor de velocidade é calculado e 
 fornecido como entrada para o controlador RRMC. A execução da trajetória para sempre 
@@ -305,26 +306,28 @@ Para avaliar o desempenho em cada trajetória, calculamos a pontuação:
 a fim de capturar informações não apenas sobre o estado final da trajetória, mas também ao 
 longo de toda a sua execução.
 
-O fluxograma da figura \ref*{fig:exp-flow} detalha o processo geral para a execução das 
+O fluxograma da figura~\ref*{fig:exp-flow} detalha o processo geral para a execução das 
 trajetórias do manipulador robótico. Inicialmente, são escolhidas duas configurações 
-\((q_0\) e \(q_f\)). Em seguida, calcula-se as posições iniciais e finais (\(E_0\) e 
-\(E_f\)) do efetuador final em ambas as configurações. Verifica-se se há colisão com 
+\((q_0\) e \(q_f\)). Em seguida, calcula-se as posições inicial e desejada (\(E_i\) e 
+\(E_t\)) do efetuador final em ambas as configurações. Verifica-se se há colisão com 
 o chão (plano $z=0$): caso positivo, retorna-se à escolha das configurações. Se não há 
 colisão, escolhe-se um ganho \(k_0\) e calcula-se o erro de posição \(\xi\). Avalia-se 
 se há condições de parada da trajetória; se sim, os resultados são salvos e a trajetória 
-é reiniciada com um novo ganho \(k_0\). Se não, atualiza-se \(E_0\) conforme o RRMC
+é reiniciada com um novo ganho \(k_0\). Se não, atualiza-se \(E_i\) conforme o RRMC
 e o processo continua até não haver mais ganhos \(k_0\) para escolher, concluindo o 
-experimento.
+a execução das trajetórias.
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\textwidth]{./Images/exp-flow.pdf}
-	\caption{Etapas seguidas na execução de um experimento.}\label{fig:exp-flow}
+	\caption{Etapas seguidas na simulação das trajetórias executadas.}\label{fig:exp-flow}
 \end{figure}
 
 Vale ressaltar que devido a natureza complexa da determinação do espaço 
 de trabalho do manipulador, procurou-se simplesmente escolher 
-os pontos inicias e finais de modo que sejam posições atingíveis, deixando a 
-cargo do controlador a execução da melhor trajetória cartesiana entre os dois pontos.
-Além disso, a escolha de tais pontos foi feita de maneira aleatória ao longo de diversos experimentos
-de modo a não privilegiar nenhuma configuração específica do manipulador.
+os pontos inicial e desejado de modo que sejam posições atingíveis no espaço
+de trabalho do manipulador, executando-se uma 
+trajetória cartesiana na direção do vetor unitário entre os dois pontos.
+Além disso, a escolha de tais pontos foi feita de maneira aleatória ao longo de 
+diversas simulações, de modo a não privilegiar nenhuma configuração específica do 
+manipulador.
