--- a/src/Cap00/Simbolos.tex
+++ b/src/Cap00/Simbolos.tex
@@ -17,7 +17,7 @@
     \item[$\xi$] \quad Velocidade do efetuador final.
     \item[$\mu$] \quad Medida de manipulabilidade.
     \item[$w$] \quad Métrica de performance.
-    \item[$I(w)$] \quad Índice de desempenho da métrica w.
+    \item[$I(w)$] \quad Índice de desempenho da métrica \(w\).
     \item[$E_i$] \quad Posição inicial do efetuador.
     \item[$E_t$] \quad Posição desejada do efetuador.
 \end{description}
