--- a/src/Cap03/Capitulo3.tex
+++ b/src/Cap03/Capitulo3.tex
@@ -178,10 +178,10 @@ definidos, retornando um único resultado e são normalmente usados para tarefas
 que possuem requisição e retorno, como por exemplo capturar uma imagem de um
 único quadro, dispensando o processamento contínuo. Por outro lado, ações são
 destinadas a tarefas de longa duração e são construídas com base em diferentes
-tópicos e serviços. A figura~\ref{fig:ros-action} ilustra os componentes básicos
+tópicos e serviços. A figura~\ref{fig:ros-action} ilustra as componentes fundamentais
 de um nó de ação: um objetivo, um \emph{feedback} e um resultado. Um nó do tipo cliente de ação envia um objetivo
 para um nó servidor de ação, que reconhece a requisição, retorna um fluxo
-continua de dados através de um feedback até que a ação seja concluída ou
+contínuo de dados através de um feedback até que a ação seja concluída ou
 cancelada, quando por fim retorna um resultado.
 
 \begin{figure}
